fixed left nav z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 app-top-header{
-    z-index: 2;
+    z-index: 4;
     position: absolute;
 }
 *:not(app-top-header, app-title){
